syntax = "proto3";

option csharp_namespace = "s3ng.Contracts.IAM";

package registration;

//Сервис регистрации
service Registration {
 //Зарегистрировать пользователя	
rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
}

//Перечисление результата регистрации
enum RegisterResult {
	//Неизвестно
	unspecified = 0;
	//Ошибка
	fail = 1;
	//Успех
	success = 2;
}

//Перечисление ролей для регистрации
enum RoleType{
	//Пользователь
	user = 0;
	//Админ
	admin = 1;
}

//Запрос на регистрацию
message RegisterRequest {
  string email = 1;
  string password = 2;
  RoleType role = 3;
}

//Результат регистрации
message RegisterResponse {
  string message = 1;
  RegisterResult result = 2;
}
