syntax = "proto3";

option csharp_namespace = "s3ng.Contracts.IAM";

package authentication;

//Сервис аутентификации
service Authentication {
	//Аутентифицировать пользователя	
	rpc AuthenticateUser (AuthenticationRequest) returns (AuthenticationResponse);
	//Обновить токен
	rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse);
    //Получить профиль аутентифиции
	rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
}

//Перечисление результата аутентификации
enum AuthenticationResult {
	//Неизвестно
	AUTH_UNSPECIFIED = 0;
	//Пользователь не найден
	AUTH_USER_NOT_FOUND = 1;
	//Некорректный пароль
	AUTH_INVALID_PASSWORD = 2;
	//Успех
	AUTH_SUCCESS = 3;
}

//Перечисление результата рефреш токена
enum RefreshTokenResult{
	//Неизвестно
	REFRESH_UNSPECIFIED = 0;
	//Пользователь не найден
	REFRESH_USER_NOT_FOUND = 1;
	//Некорректный рефреш токен
	REFRESH_INVALID_TOKEN = 2;
	//Успех
	REFRESH_SUCCESS = 3;
}

//Перечисление результата запроса профиля
enum GetProfileResult {
	//Неизвестно
	GET_PROFILE_UNSPECIFIED = 0;
	//Пользователь не найден
	GET_PROFILE_USER_NOT_FOUND = 1;
	//Некорректный рефреш токен
	GET_PROFILE_INVALID_TOKEN = 2;
	//Успех
	GET_PROFILE_SUCCESS = 3;
    //Неудача
    GET_PROFILE_FAIL = 4;
}

//Запрос на авторизацию
message AuthenticationRequest {
  string email = 1;
  string password = 2;
}

//Результат авторизации
message AuthenticationResponse {
  AuthenticationResult result = 1;
  string token = 2;
  string refreshToken = 3;
}

//Запрос на обновление токена
message RefreshAccessTokenRequest{
	string refreshToken = 1;
}

//Ответ на запрос о рефреш токене
message RefreshAccessTokenResponse{
	RefreshTokenResult result = 1;
	string token = 2;
	string refreshToken = 3;
}

//Запрос профиля
message GetProfileRequest{
	string refreshToken = 1;
}

//Ответ на запрос профиля
message GetProfileResponse{
	GetProfileResult result = 1;
	string email = 2;
	string authentication_id = 3;
}
